2018-12-13
=================

- Fix CharField and CharHash: only strings are accept
- Fix IntegerField and IntegerHash: only numbers are accept
- validator feature for fields


v2.0.0 - 2018-03-27 - beta
=================

- Remove signals support. Support "save" method in model instead (See example 
  in README)
- Remove "database" field in model. Use method get_db() for return 
  redis.StrictRedis instance
- Remove "prefix" attribute
- Keys are always convert to string


v1.0.7 - 2017-02-08
=================

- Auto import foreign models


v1.0.4 - 2017-01-29
=================

- Allow use '0' or 0 as object's pk
- defaultPk attribute for ForeignKey provide default object for not
  assigned foreign object. This feature provide access to deep properties
  without risk of catch AttributeError. Eg: o = user.site.owner, where site
  and owner is ForeignKey to other model, but site is not set. In simple case
  we're catch AttributeError: 'NoneType' object has no attribute 'owner'. But,
  when site is ForeignKey(to='Site', defaultPk=0), then site always
  present as 'Site' model. At the moment, you need provide your 'Site'
  behavior with pk key is 0.
- Performance improvement: models using lazy initialization now


v1.0.3 - 2017-01-20
=================

- (!) Deprecated type: ForeignKeyHash. Link now must be ForeignKey
- Support "withscores" in zrange, zrangebyscore, zrevrange, zrevrangebyscore
methods. This methods return list of tuples


v1.0.2 - 2016-12-06
=================

- Minor fixes: support ttl, expire commands for scalar fields


v1.0.1 - 2016-09-27
=================

- List, Set and SortedSet not necessarily refer to other models
- Integer and Char fields return 0 and '' instead None if not assigned
- Enum must have default value